--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "modelizer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "An ORM-Mapper with a shared model between client and server for MongoDB",
   "main": "lib/model.js",
   "directories": {
-    "example": "examples",
     "test": "test"
   },
   "dependencies": {
@@ -35,7 +34,8 @@
   "keywords": [
     "orm",
     "mongodb",
-    "angularjs"
+    "angularjs",
+    "model"
   ],
   "author": "Jonathan Häberle",
   "license": "BSD-2-Clause",
