--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "modelizer",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "An ORM-Mapper with a shared model between client and server for MongoDB",
   "main": "lib/model.js",
   "directories": {
@@ -35,7 +35,8 @@
     "orm",
     "mongodb",
     "angularjs",
-    "model"
+    "model",
+    "modelizer"
   ],
   "author": "Jonathan Häberle",
   "license": "BSD-2-Clause",
