--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
     "karma-requirejs": "~0.2.1",
     "karma-script-launcher": "~0.1.0",
     "mocha": "~1.17.1",
-    "browserify": "~3.33.0"
+    "browserify": "~3.33.0",
+    "grunt": "^0.4.4",
+    "grunt-browserify-bower": "^0.1.4",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-mocha": "^0.4.10",
+    "grunt-mocha-test": "^0.10.0",
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1"
   },
   "scripts": {
     "test": "mocha"
