--- a/package.json
+++ b/package.json
@@ -12,25 +12,20 @@
     "express": "~3.4.8"
   },
   "devDependencies": {
-    "karma": "~0.10.9",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-coffee-preprocessor": "~0.1.2",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.1.5",
-    "karma-mocha": "~0.1.1",
-    "karma-phantomjs-launcher": "~0.1.1",
-    "karma-requirejs": "~0.2.1",
-    "karma-script-launcher": "~0.1.0",
     "mocha": "~1.17.1",
     "browserify": "~3.33.0",
     "grunt": "^0.4.4",
-    "grunt-browserify-bower": "^0.1.4",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-mocha": "^0.4.10",
-    "grunt-mocha-test": "^0.10.0",
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-mocha-test": "~0.10.0",
+    "grunt-contrib-jshint": "~0.9.2",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-browserify": "~2.0.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-release": "^0.7.0",
+    "grunt-npm-install": "^0.1.0",
+    "karma": "^0.12.1",
+    "grunt-karma": "^0.8.2",
+    "karma-mocha": "^0.1.3"
   },
   "scripts": {
     "test": "mocha"
