--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "q": "~0.9.7",
     "express": "~3.4.8",
     "objectid-browser": "0.0.1",
-    "mongodb": "^1.4.2"
+    "mongodb": "^1.4.2",
+    "assert": "^1.1.1"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
